--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "luxon": "^2.0.1",
     "vue": "^3.0.0",
+    "vue-luxon": "^0.10.0",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.0.0"
   },
