--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://olawale-o/vue-awesome-books",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build && rm -rf docs && mv dist docs",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
