--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - name: Hello world
-        run: echo "Hello world"
+        run: echo Hello world
         
