--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -8,6 +8,8 @@ jobs:
     name: Eslint
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
       - name: Hello world
-        run: echo Hello world
+        run: echo Greeting world
         
