--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -8,6 +8,7 @@ jobs:
     name: Eslint
     runs-on: ubuntu-18.04
     steps:
+      - name: Pre Actions
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - name: Hello world
