--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Pre Actions
       - uses: actions/checkout@v2
+      - name: Another Pre Actions
       - uses: actions/setup-node@v1
       - name: Hello world
         run: echo Greeting world
