--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "vue-awesome-books",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://olawale-o/vue-awesome-books",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "core-js": "^3.6.5",
     "luxon": "^2.0.1",
+    "roboto-fontface": "*",
     "vue": "^3.0.0",
     "vue-luxon": "^0.10.0",
+    "vuetify": "npm:@vuetify/nightly@next",
     "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.0.0"
+    "vuex-persistedstate": "^4.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -23,7 +26,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.1",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
@@ -43,5 +48,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "homepage": "https://olawale-o/vue-awesome-books"
 }
