--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -8,8 +8,8 @@ jobs:
     name: Eslint
     strategy:
       matrix:
-        version: [10, 12]
-        os: [ubuntu-latest, windows-latest]
+        version: [18]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Default Pre Actions
