--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -8,7 +8,7 @@ jobs:
     name: Eslint
     strategy:
       matrix:
-        version: [18]
+        node-version: [10.x, 12.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -17,4 +17,4 @@ jobs:
       - name: Use Nodejs
         uses: actions/setup-node@v1
       - name: Echo matrix name
-        run: echo Matrix OS ${{ matrix.os }}
+        run: echo Matrix OS ${{ matrix.node-version }}
