Modify eslint job

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Setup ESLint
         run: |
-          npm install --save-dev @vue/cli-plugin-babel@4.5.0 @vue/cli-plugin-eslint@4.5.0 babel-eslint@10.1.0 eslint@6.7.2 eslint-plugin-vue@7.0.0
+          npm install --save-dev @vue/cli-plugin-babel@4.5.0 @vue/cli-plugin-eslint@4.5.0 babel-eslint@10.1.0 eslint@6.7.2 eslint-plugin-vue@7.0.0 @vue/cli-service@4.5.0 @vue/compiler-sfc@3.0.0
           [ -f .eslintrc.js]
       - name: ESLint Report
-        run: npx eslint .
+        run: vue-cli-service lint
