--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -8,8 +8,8 @@ jobs:
     name: Eslint
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
-        os: [ubuntu-latest, windows-latest]
+        node-version: [12.x]
+        os: [ubuntu-18.04]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Git checkout
