--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
       - name: Print Secrets
         run: |
-          echo ${{ secrets }}
+          echo ${{ secrets.GITHUB_TOKEN }}
