--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -13,6 +13,6 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Print Secrets
+      - name: Print Gihthub events
         run: |
-          echo ${{ secrets.GITHUB_TOKEN }}
+          echo ${{ github.event }}
