--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
       - name: Print Gihthub events
         run: |
-          echo ${{ github.event }}
+          echo ${{ github.event.pull_request.number }}
