--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -13,7 +13,8 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Print Gihthub events
+      - name: Git checkout
         uses: peter-evans/create-or-update-comment@v2
+      - name: Print Gihthub events
         run: |
           echo issue number ${{ github.event.pull_request.number }}
