--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -15,6 +15,14 @@ jobs:
     steps:
       - name: Git checkout
         uses: peter-evans/create-or-update-comment@v2
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            This is a multi-line test comment
+            - With GitHub **Markdown** :sparkles:
+            - Created by [create-or-update-comment][1]
+
+            [1]: https://github.com/peter-evans/create-or-update-comment
       - name: Print Gihthub events
         run: |
           echo issue number ${{ github.event.pull_request.number }}
