--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Git checkout
         uses: peter-evans/create-or-update-comment@v2
         with:
-          issue-number: ${{ github.event.pull_request.number }}
+          issue-number: 1
           body: |
             This is a multi-line test comment
             - With GitHub **Markdown** :sparkles:
