--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -24,5 +24,5 @@ jobs:
 
             [1]: https://github.com/peter-evans/create-or-update-comment
       - name: Print Gihthub events
-        run: echo "GITHUB CONTEXT ${{ toJSON(github) }}"
+        run: echo "GITHUB CONTEXT ${{ toJSON(github.event) }}"
         shell: bash
