--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Git checkout
         uses: peter-evans/create-or-update-comment@v2
         with:
-          issue-number: 3
+          issue-number: ${{ github.event.issue.number }}
           body: |
             This is a multi-line test comment
             - With GitHub **Markdown** :sparkles:
@@ -24,5 +24,5 @@ jobs:
 
             [1]: https://github.com/peter-evans/create-or-update-comment
       - name: Print Gihthub events
-        run: echo "GITHUB CONTEXT ${{ toJSON(github.event) }}"
+        run: echo "GITHUB CONTEXT ${{ toJSON(github) }}"
         shell: bash
