Include login in issue

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -18,11 +18,12 @@ jobs:
         with:
           issue-number: ${{ github.event.issue.number }}
           body: |
-            This is a multi-line test comment
+            Thank you ${{ github.event.issue.user.login }} for filing this issue
             - With GitHub **Markdown** :sparkles:
             - Created by [create-or-update-comment][1]
 
             [1]: https://github.com/peter-evans/create-or-update-comment
+          reactions: heart
       - name: Print Gihthub events
         run: echo "GITHUB CONTEXT ${{ toJSON(github) }}"
         shell: bash
