Modify job name

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -6,8 +6,8 @@ on:
       - opened
 
 jobs:
-  label_issue:
-    name: Label Issue
+  comment_issue:
+    name: Comment Issue
     strategy:
       matrix:
         os: [ubuntu-latest]
