Add update update comment job

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -27,3 +27,28 @@ jobs:
       - name: Print Gihthub events
         run: echo "GITHUB CONTEXT ${{ toJSON(github) }}"
         shell: bash
+  
+  update_comment:
+    name: Upate Issue
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Git checkout
+        uses: peter-evans/create-or-update-comment@v2
+        id: couc
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            Thank you ${{ github.event.issue.user.login }} for updating this issue
+            - With GitHub **Markdown** :sparkles:
+            - Created by [create-or-update-comment][1]
+
+            [1]: https://github.com/peter-evans/create-or-update-comment
+          reactions: heart
+      - name: Check outputs
+        run: |
+          echo "Comment ID - ${{ steps.couc.outputs.comment-id }}"
+          
+    
