--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
-          body-includes: This comment was written by a bot!
+          body-includes: issue
       
       - name: Create Comment
         if: steps.fc.outputs.comment-id == ''
