--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -16,7 +16,7 @@ jobs:
         uses: peter-evans/find-comment@v2
         id: fc
         with:
-          issue-number: ${{ github.event.issue.number }}
+          issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
           body-includes: issue
       
