--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -34,7 +34,7 @@ jobs:
           reactions: heart
 
       - name: Update Comment Issue
-        if: steps.fc.outputs.comment-id == ''
+        if: steps.fc.outputs.comment-id != ''
         uses: peter-evans/create-or-update-comment@v2
         with:
           issue-number: ${{ github.event.issue.number }}
