--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -20,7 +20,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Setup ESLint
         run: |
-          npm install --save-dev @vue/cli-plugin-babel@4.5.0 @vue/cli-plugin-eslint@4.5.0 babel-eslint@10.1.0 eslint@6.7.2 eslint-plugin-prettier@3.3.1 eslint-plugin-vue@7.0.0 @vue/cli-service@4.5.0 @vue/compiler-sfc@3.0.0 @vue/eslint-config-prettier@6.0.0 prettier@2.2.1
+          npm install --save-dev @vue/cli-plugin-babel@5.0.0 @vue/cli-plugin-eslint@~5.0.0 babel-eslint@10.1.0 eslint@7.32.0 eslint-plugin-prettier@3.3.1 eslint-plugin-vue@8.0.3 @vue/cli-service@5.0.0 @vue/compiler-sfc@3.2.45 @vue/eslint-config-prettier@6.0.0 prettier@2.2.1
           [ -f .eslintrc.js ]
       - name: ESLint Report
         run: npm run lint
+ 
