--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -8,7 +8,7 @@ jobs:
     name: Eslint
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [12.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
